--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <!--<span class="imgShow"></span>-->
                 <span class="imgHide"></span>
             </div>
-            <span class="videoText"></span>
+            <img class="videoText" src="images/aschVideoText.png">
         </div>
         <div class="introductionCenter">
             <div class="introductionContent">
