--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <img src="images/bbb.png" alt="AschLogo">
             </div>
             <div class="aschHomeLinks">
-                <a class="toGetStarted" href="javascript:;" title="coming soon">
+                <a class="toGetStarted" href="javascript:;">
                     <img class="toGetStarted1" src="images/comeSoon.png" alt="Getstarted">
                     <img class="toGetStarted2" src="images/Getstarted.png" alt="Getstarted">
                 </a>
