--- a/index.html
+++ b/index.html
@@ -23,39 +23,39 @@
             <span class="navLogo replaceLogoTwo"></span>
         </a>
         <div class="navRight">
+            <div class="switchLanguage">
+                <button class="simplifiedChinese">中文简体</button>
+                <button class="switchToEnglish">English</button>
+            </div>
             <ul class="equalThan">
                 <li>
-                    <a href="#home">Home</a>
+                    <a href="#home" id="nav_home"></a>
                 </li>
                 <li>
-                    <a href="#introduction">Introduction</a>
+                    <a href="#introduction" id="nav_introduction"></a>
                 </li>
                 <li>
-                    <a href="#application">Dapps</a>
+                    <a href="#application"  id="nav_dapps"></a>
                 </li>
                 <li>
-                    <a href="#features">Features</a>
+                    <a href="#features" id="nav_features"></a>
                 </li>
                 <li>
-                    <a href="#advantages">Advantages</a>
+                    <a href="#advantages" id="nav_advantages"></a>
                 </li>
                 <li>
-                    <a href="#scenarios">Scenarios</a>
+                    <a href="#scenarios" id="nav_scenarios"></a>
                 </li>
                 <li>
-                    <a href="#downloads">Downloads</a>
+                    <a href="#downloads" id="nav_downloads"></a>
                 </li>
                 <li>
-                    <a href="#media">Partners</a>
+                    <a href="#media" id="nav_partners"></a>
                 </li>
                 <li>
-                    <a href="#links">Links</a>
+                    <a href="#links" id="nav_links"></a>
                 </li>
             </ul>
-            <!--<a class="downloadWhitePaper downloadWhitePaperOne" href="http://asch-public.oss-cn-beijing.aliyuncs.com/asch.io/Asch%20Whitepaper.pdf" target="_blank">Whitepaper</a>-->
-
-            <!--<a class="downloadWhitePaper downloadWhitePaperOne button button&#45;&#45;rayen button&#45;&#45;border-thin button&#45;&#45;text-thick button&#45;&#45;text-upper button&#45;&#45;size-s" data-text="Whitepaper" href="http://asch-public.oss-cn-beijing.aliyuncs.com/asch.io/Asch%20Whitepaper.pdf" target="_blank"><span>Whitepaper</span></a>-->
-
         </div>
     </div>
 </nav>
@@ -145,8 +145,8 @@
 <div class="section" id="introduction">
     <div class="sectionTop">
         <i></i>
-        <span>Introduction</span>
-        <p>Next Generation Decentralized Application Platform</p>
+        <span id="introductionTopTitle"></span>
+        <p id="introductionTopContent"></p>
     </div>
     <div class="introductionContainer">
         <div class="aschVideo">
@@ -933,10 +933,13 @@
 
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/jquery.i18n.properties-1.0.9.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <!--<script type="text/javascript" src="js/canvas.js"></script>-->
 <script type="text/javascript" src="js/canvas1.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 <!--<script type="text/javascript" src="js/homeCanvas.js"></script>-->
+
 <script type="text/javascript" src="js/videojs-ie8.min.js"></script>
 <script type="text/javascript" src="js/video.min.js"></script>
 <script type="text/javascript" src="js/videoPaly.js"></script>
