add dapp language switch

--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
 <script type="text/javascript" src="js/index.js"></script>
 <!--<script type="text/javascript" src="js/canvas.js"></script>-->
 <script type="text/javascript" src="js/canvas1.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/indexSwitchLanguage.js"></script>
 <!--<script type="text/javascript" src="js/homeCanvas.js"></script>-->
 
 <script type="text/javascript" src="js/videojs-ie8.min.js"></script>
