--- a/dapp2.html
+++ b/dapp2.html
@@ -18,39 +18,39 @@
             <span class="navLogo replaceLogoTwo"></span>
         </a>
         <div class="navRight">
+            <div class="switchLanguage">
+                <button class="simplifiedChinese">中文简体</button>
+                <button class="switchToEnglish">English</button>
+            </div>
             <ul class="equalThan">
                 <li>
-                    <a href="index.html#home">Home</a>
+                    <a href="index.html#home" id="dappNav1">Home</a>
                 </li>
                 <li>
-                    <a href="index.html#introduction">Introduction</a>
+                    <a href="index.html#introduction" id="dappNav2">Introduction</a>
                 </li>
                 <li>
-                    <a href="index.html#application">Dapps</a>
+                    <a href="index.html#application" id="dappNav3">Dapps</a>
                 </li>
                 <li>
-                    <a href="index.html#features">Features</a>
+                    <a href="index.html#features" id="dappNav4">Features</a>
                 </li>
                 <li>
-                    <a href="index.html#advantages">Advantages</a>
+                    <a href="index.html#advantages" id="dappNav5">Advantages</a>
                 </li>
                 <li>
-                    <a href="index.html#scenarios">Scenarios</a>
+                    <a href="index.html#scenarios" id="dappNav6">Scenarios</a>
                 </li>
                 <li>
-                    <a href="index.html#downloads">Downloads</a>
+                    <a href="index.html#downloads" id="dappNav7">Downloads</a>
                 </li>
                 <li>
-                    <a href="index.html#media">Partners</a>
+                    <a href="index.html#media" id="dappNav8">Partners</a>
                 </li>
                 <li>
-                    <a href="index.html#links">Links</a>
+                    <a href="index.html#links" id="dappNav9">Links</a>
                 </li>
             </ul>
-            <!--<a class="downloadWhitePaper downloadWhitePaperOne" href="http://asch-public.oss-cn-beijing.aliyuncs.com/asch.io/Asch%20Whitepaper.pdf" target="_blank">Whitepaper</a>-->
-
-            <!--<a class="downloadWhitePaper downloadWhitePaperOne button button&#45;&#45;rayen button&#45;&#45;border-thin button&#45;&#45;text-thick button&#45;&#45;text-upper button&#45;&#45;size-s" data-text="Whitepaper" href="http://asch-public.oss-cn-beijing.aliyuncs.com/asch.io/Asch%20Whitepaper.pdf" target="_blank"><span>Whitepaper</span></a>-->
-
         </div>
     </div>
 </nav>
@@ -60,9 +60,9 @@
     </div>
     <div class="applicationCenter">
         <div class="applicationCenterTitle">
-            <a class="toHome" href="index.html">Home</a>
+            <a class="toHome" href="index.html" id="applicationCenterTitle2">Home</a>
             <span>></span>
-            <a class="toCCtime" href="dapp2.html">Koumei Cottage</a>
+            <a class="toCCtime" href="dapp2.html" id="dappContentTitle21">Koumei Cottage</a>
         </div>
         <div class="applicationContent">
             <div class="applicationContentLeft">
@@ -73,31 +73,31 @@
             <div class="applicationContentRight">
 
                 <i class="koumeiWatermark"></i>
-                <span class="contentRightTitle">Koumei Cottage</span>
+                <span class="contentRightTitle" id="dappContentTitle22">Koumei Cottage</span>
 
-                <p class="applicationDescribe">Koumei Cottage(KMC), which is called “Kong Ming Wu” in Chinese, is a decentralized market predicting application based on Asch platform.</p>
+                <p class="applicationDescribe" id="dappDescribe2">Koumei Cottage(KMC), which is called “Kong Ming Wu” in Chinese, is a decentralized market predicting application based on Asch platform.</p>
 
                 <ul class="aschSide">
                     <li>
                         <!--<p>Asch</p>-->
-                        <p>value driven</p>
+                        <p id="aschSide4">value driven</p>
                         <span class="rightLine"></span>
                     </li>
                     <li>
                         <!--<p>Asch</p>-->
-                        <p>asset reuse</p>
+                        <p id="aschSide5">asset reuse</p>
                         <span class="rightLine"></span>
                     </li>
                     <li>
                         <!--<p>Asch</p>-->
-                        <p>decentralization</p>
+                        <p id="aschSide6">decentralization</p>
                         <!--<span class="rightLine"></span>-->
                     </li>
                 </ul>
 
                 <div class="applicationLinks">
-                    <a href="http://www.koumei.io/ " target="_blank">Website</a>
-                    <a href="http://asch-public.oss-cn-beijing.aliyuncs.com/Koumei/孔明屋%20%20Koumei%20Cottage.pdf" target="_blank">WhitePaper</a>
+                    <a href="http://www.koumei.io/ " target="_blank" id="websiteText2">Website</a>
+                    <a href="http://asch-public.oss-cn-beijing.aliyuncs.com/Koumei/孔明屋%20%20Koumei%20Cottage.pdf" target="_blank" id="whitePaper2">WhitePaper</a>
                 </div>
 
             </div>
@@ -105,8 +105,8 @@
         </div>
 
         <div class="applicationIntroduction">
-            <span class="applicationIntroductionTitle">Introduction:</span>
-            <p>Koumei Cottage(KMC)is a decentralized prediction market developed on Asch platform.It belongs to type 1 dapp.And KMC has the features of open-source, autonomy,distributed storage,token incentive,publicity and transparency according to the dapp definition in Asch white-paper(1). The difference from ETH dapp is that its data is stored in the independent block chain, rather than sharing  a chain or a set of account book with other application,and is not attached to other block chain system.</p>
+            <span class="applicationIntroductionTitle" id="dappIntroduction2">Introduction:</span>
+            <p id="dappIntroductionContent2">Koumei Cottage(KMC)is a decentralized prediction market developed on Asch platform.It belongs to type 1 dapp.And KMC has the features of open-source, autonomy,distributed storage,token incentive,publicity and transparency according to the dapp definition in Asch white-paper(1). The difference from ETH dapp is that its data is stored in the independent block chain, rather than sharing  a chain or a set of account book with other application,and is not attached to other block chain system.</p>
         </div>
 
     </div>
@@ -115,16 +115,16 @@
     <div class="footerContainer">
         <div class="footerLeft">
             <div class="footerWeChat">
-                <p>weChat</p>
+                <p id="dappFooterText21">weChat</p>
                 <span></span>
             </div>
             <div class="footerWb">
-                <p>weibo</p>
+                <p id="dappFooterText22">weibo</p>
                 <span></span>
             </div>
         </div>
         <a href="mailto:@asch.io" class="footerRight">
-            <p>Email</p>
+            <p id="dappFooterText23">Email</p>
             <i></i>
             <span>service@asch.io</span>
         </a>
@@ -132,6 +132,8 @@
 
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/jquery.i18n.properties-1.0.9.js"></script>
+<script type="text/javascript" src="js/dappSwitchLanguage.js"></script>
 <script type="text/javascript" src="js/application.js"></script>
 </body>
 </html>
