--- a/dapp3.html
+++ b/dapp3.html
@@ -18,39 +18,39 @@
             <span class="navLogo replaceLogoTwo"></span>
         </a>
         <div class="navRight">
+            <div class="switchLanguage">
+                <button class="simplifiedChinese">中文简体</button>
+                <button class="switchToEnglish">English</button>
+            </div>
             <ul class="equalThan">
                 <li>
-                    <a href="index.html#home">Home</a>
+                    <a href="index.html#home" id="dappNav1">Home</a>
                 </li>
                 <li>
-                    <a href="index.html#introduction">Introduction</a>
+                    <a href="index.html#introduction" id="dappNav2">Introduction</a>
                 </li>
                 <li>
-                    <a href="index.html#application">Dapps</a>
+                    <a href="index.html#application" id="dappNav3">Dapps</a>
                 </li>
                 <li>
-                    <a href="index.html#features">Features</a>
+                    <a href="index.html#features" id="dappNav4">Features</a>
                 </li>
                 <li>
-                    <a href="index.html#advantages">Advantages</a>
+                    <a href="index.html#advantages" id="dappNav5">Advantages</a>
                 </li>
                 <li>
-                    <a href="index.html#scenarios">Scenarios</a>
+                    <a href="index.html#scenarios" id="dappNav6">Scenarios</a>
                 </li>
                 <li>
-                    <a href="index.html#downloads">Downloads</a>
+                    <a href="index.html#downloads" id="dappNav7">Downloads</a>
                 </li>
                 <li>
-                    <a href="index.html#media">Partners</a>
+                    <a href="index.html#media" id="dappNav8">Partners</a>
                 </li>
                 <li>
-                    <a href="index.html#links">Links</a>
+                    <a href="index.html#links" id="dappNav9">Links</a>
                 </li>
             </ul>
-            <!--<a class="downloadWhitePaper downloadWhitePaperOne" href="http://asch-public.oss-cn-beijing.aliyuncs.com/asch.io/Asch%20Whitepaper.pdf" target="_blank">Whitepaper</a>-->
-
-            <!--<a class="downloadWhitePaper downloadWhitePaperOne button button&#45;&#45;rayen button&#45;&#45;border-thin button&#45;&#45;text-thick button&#45;&#45;text-upper button&#45;&#45;size-s" data-text="Whitepaper" href="http://asch-public.oss-cn-beijing.aliyuncs.com/asch.io/Asch%20Whitepaper.pdf" target="_blank"><span>Whitepaper</span></a>-->
-
         </div>
     </div>
 </nav>
@@ -60,9 +60,9 @@
     </div>
     <div class="applicationCenter">
         <div class="applicationCenterTitle">
-            <a class="toHome" href="index.html">Home</a>
+            <a class="toHome" href="index.html" id="applicationCenterTitle3">Home</a>
             <span>></span>
-            <a class="toCCtime" href="dapp3.html">Help China</a>
+            <a class="toCCtime" href="dapp3.html" id="dappContentTitle31">Help China</a>
         </div>
         <div class="applicationContent">
             <div class="applicationContentLeft">
@@ -73,38 +73,38 @@
             <div class="applicationContentRight">
 
                 <i class="bangWatermark"></i>
-                <span class="contentRightTitle">Help China</span>
+                <span class="contentRightTitle" id="dappContentTitle32">Help China</span>
 
-                <p class="applicationDescribe">Help China is a mobile application of light-social, news and platform based on Asch chain with the function that users can allocate and accept assignments online, chat and browsing news.</p>
+                <p class="applicationDescribe" id="dappDescribe3">Help China is a mobile application of light-social, news and platform based on Asch chain with the function that users can allocate and accept assignments online, chat and browsing news.</p>
 
                 <ul class="aschSide">
                     <li>
                         <!--<p>Asch</p>-->
-                        <p>Social contract</p>
+                        <p id="aschSide7">Social contract</p>
                         <span class="rightLine"></span>
                     </li>
                     <li>
                         <!--<p>Asch</p>-->
-                        <p>task contract</p>
+                        <p id="aschSide8">task contract</p>
                         <span class="rightLine"></span>
                     </li>
                     <li>
                         <!--<p>Asch</p>-->
-                        <p>commonweal project</p>
+                        <p id="aschSide9">commonweal project</p>
                         <!--<span class="rightLine"></span>-->
                     </li>
                 </ul>
 
                 <div class="applicationLinks">
-                    <a href="http://www.bangbeichina.com/" target="_blank">Website</a>
-                    <a href="javascript:;">WhitePaper</a>
+                    <a href="http://www.bangbeichina.com/" target="_blank" id="websiteText3">Website</a>
+                    <a href="javascript:;" id="whitePaper3">WhitePaper</a>
                 </div>
             </div>
         </div>
 
         <div class="applicationIntroduction">
-            <span class="applicationIntroductionTitle">Introduction:</span>
-            <p>Help China is a mobile application of light-social, news and platform based on Asch chain with the function that users can allocate and accept assignments online, chat and browsing news. Help China announces demands of individuals and collective to other individuals or the collective through online matching rule so that other individuals or the collective can understand users’ demands and fulfill them online or offline. By doing this, it will increase the interaction between people and solve the existing problem of human nature in reality to increase the friendly atmosphere of mutual help for the purpose of building a friendly and kind social environment.</p>
+            <span class="applicationIntroductionTitle" id="dappIntroduction3">Introduction:</span>
+            <p id="dappIntroductionContent3">Help China is a mobile application of light-social, news and platform based on Asch chain with the function that users can allocate and accept assignments online, chat and browsing news. Help China announces demands of individuals and collective to other individuals or the collective through online matching rule so that other individuals or the collective can understand users’ demands and fulfill them online or offline. By doing this, it will increase the interaction between people and solve the existing problem of human nature in reality to increase the friendly atmosphere of mutual help for the purpose of building a friendly and kind social environment.</p>
         </div>
 
     </div>
@@ -113,16 +113,16 @@
     <div class="footerContainer">
         <div class="footerLeft">
             <div class="footerWeChat">
-                <p>weChat</p>
+                <p id="dappFooterText31">weChat</p>
                 <span></span>
             </div>
             <div class="footerWb">
-                <p>weibo</p>
+                <p id="dappFooterText32">weibo</p>
                 <span></span>
             </div>
         </div>
         <a href="mailto:@asch.io" class="footerRight">
-            <p>Email</p>
+            <p id="dappFooterText33">Email</p>
             <i></i>
             <span>service@asch.io</span>
         </a>
@@ -130,6 +130,8 @@
 
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/jquery.i18n.properties-1.0.9.js"></script>
+<script type="text/javascript" src="js/dappSwitchLanguage.js"></script>
 <script type="text/javascript" src="js/application.js"></script>
 </body>
 </html>
