--- a/dapp4.html
+++ b/dapp4.html
@@ -18,39 +18,39 @@
             <span class="navLogo replaceLogoTwo"></span>
         </a>
         <div class="navRight">
+            <div class="switchLanguage">
+                <button class="simplifiedChinese">中文简体</button>
+                <button class="switchToEnglish">English</button>
+            </div>
             <ul class="equalThan">
                 <li>
-                    <a href="index.html#home">Home</a>
+                    <a href="index.html#home" id="dappNav1">Home</a>
                 </li>
                 <li>
-                    <a href="index.html#introduction">Introduction</a>
+                    <a href="index.html#introduction" id="dappNav2">Introduction</a>
                 </li>
                 <li>
-                    <a href="index.html#application">Dapps</a>
+                    <a href="index.html#application" id="dappNav3">Dapps</a>
                 </li>
                 <li>
-                    <a href="index.html#features">Features</a>
+                    <a href="index.html#features" id="dappNav4">Features</a>
                 </li>
                 <li>
-                    <a href="index.html#advantages">Advantages</a>
+                    <a href="index.html#advantages" id="dappNav5">Advantages</a>
                 </li>
                 <li>
-                    <a href="index.html#scenarios">Scenarios</a>
+                    <a href="index.html#scenarios" id="dappNav6">Scenarios</a>
                 </li>
                 <li>
-                    <a href="index.html#downloads">Downloads</a>
+                    <a href="index.html#downloads" id="dappNav7">Downloads</a>
                 </li>
                 <li>
-                    <a href="index.html#media">Partners</a>
+                    <a href="index.html#media" id="dappNav8">Partners</a>
                 </li>
                 <li>
-                    <a href="index.html#links">Links</a>
+                    <a href="index.html#links" id="dappNav9">Links</a>
                 </li>
             </ul>
-            <!--<a class="downloadWhitePaper downloadWhitePaperOne" href="http://asch-public.oss-cn-beijing.aliyuncs.com/asch.io/Asch%20Whitepaper.pdf" target="_blank">Whitepaper</a>-->
-
-            <!--<a class="downloadWhitePaper downloadWhitePaperOne button button&#45;&#45;rayen button&#45;&#45;border-thin button&#45;&#45;text-thick button&#45;&#45;text-upper button&#45;&#45;size-s" data-text="Whitepaper" href="http://asch-public.oss-cn-beijing.aliyuncs.com/asch.io/Asch%20Whitepaper.pdf" target="_blank"><span>Whitepaper</span></a>-->
-
         </div>
     </div>
 </nav>
@@ -60,7 +60,7 @@
     </div>
     <div class="applicationCenter">
         <div class="applicationCenterTitle">
-            <a class="toHome" href="index.html">Home</a>
+            <a class="toHome" href="index.html" id="applicationCenterTitle4">Home</a>
             <span>></span>
             <a class="toCCtime" href="dapp4.html">HelloKimi</a>
         </div>
@@ -75,29 +75,29 @@
                 <i class="helloWatermark"></i>
                 <span class="contentRightTitle">HelloKimi</span>
 
-                <p class="applicationDescribe">Hello kimi is the first cloud pets social casual game platform in China based on Asch side-chain technology.</p>
+                <p class="applicationDescribe" id="dappDescribe4">Hello kimi is the first cloud pets social casual game platform in China based on Asch side-chain technology.</p>
 
                 <ul class="aschSide">
                     <li>
                         <!--<p>Asch</p>-->
-                        <p>data credibility</p>
+                        <p id="aschSide10">data credibility</p>
                         <span class="rightLine"></span>
                     </li>
                     <li>
                         <!--<p>Asch</p>-->
-                        <p>high security</p>
+                        <p id="aschSide11">high security</p>
                         <span class="rightLine"></span>
                     </li>
                     <li>
                         <!--<p>Asch</p>-->
-                        <p>smart games</p>
+                        <p id="aschSide12">smart games</p>
                         <!--<span class="rightLine"></span>-->
                     </li>
                 </ul>
 
                 <div class="applicationLinks">
-                    <a href="http://hellokimi.org/" target="_blank">Website</a>
-                    <a href="javascript:;">WhitePaper</a>
+                    <a href="http://hellokimi.org/" target="_blank" id="websiteText4">Website</a>
+                    <a href="javascript:;" id="whitePaper4">WhitePaper</a>
                 </div>
 
             </div>
@@ -105,8 +105,8 @@
         </div>
 
         <div class="applicationIntroduction">
-            <span class="applicationIntroductionTitle">Introduction:</span>
-            <p> Hello kimi is the first cloud pets social casual game platform in China based on Asch side-chain technology. Hello Kimi game is positioned as a blockchain social casual game, enabling multiplayers to be online simultaneously, and is not an ordinary cat game. Due to being developed based on side-chain technology, Asch can bear the high concurrency third-party application so as to ensure stable operation of the game.</p>
+            <span class="applicationIntroductionTitle" id="dappIntroduction4">Introduction:</span>
+            <p id="dappIntroductionContent4">Hello kimi is the first cloud pets social casual game platform in China based on Asch side-chain technology. Hello Kimi game is positioned as a blockchain social casual game, enabling multiplayers to be online simultaneously, and is not an ordinary cat game. Due to being developed based on side-chain technology, Asch can bear the high concurrency third-party application so as to ensure stable operation of the game.</p>
         </div>
 
     </div>
@@ -115,16 +115,16 @@
     <div class="footerContainer">
         <div class="footerLeft">
             <div class="footerWeChat">
-                <p>weChat</p>
+                <p id="dappFooterText41">weChat</p>
                 <span></span>
             </div>
             <div class="footerWb">
-                <p>weibo</p>
+                <p id="dappFooterText42">weibo</p>
                 <span></span>
             </div>
         </div>
         <a href="mailto:@asch.io" class="footerRight">
-            <p>Email</p>
+            <p id="dappFooterText43">Email</p>
             <i></i>
             <span>service@asch.io</span>
         </a>
@@ -132,6 +132,8 @@
 
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/jquery.i18n.properties-1.0.9.js"></script>
+<script type="text/javascript" src="js/dappSwitchLanguage.js"></script>
 <script type="text/javascript" src="js/application.js"></script>
 </body>
 </html>
