--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="homeContainer">
         <div class="homeContainerContent">
             <div class="aschHomeImg1">
-                <img src="images/aschHomeChinaImg.png" alt="AschLogo">
+                <img src="images/aschHomeUKImg.png" alt="AschLogo">
             </div>
             <div class="aschHomeLinks">
                 <a class="toGetStarted" href="javascript:;">
@@ -83,8 +83,8 @@
                 </a>
                 <a class="toWhitePaper" href="http://asch-public.oss-cn-beijing.aliyuncs.com/asch.io/Asch%20Whitepaper.pdf"
                    target="_blank">
-                    <img src="images/white1.png" alt="WhitePaper">
-                    <img src="images/WhitePaper.png" alt="WhitePaper">
+                    <img class="toWhitePaper1" src="images/white1.png" alt="WhitePaper">
+                    <img class="toWhitePaper2" src="images/WhitePaper.png" alt="WhitePaper">
                 </a>
             </div>
         </div>
