--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <i></i>
                     <span></span>
                 </div>
-                <p>GitHub</p>
+                <p class="homeLinkGitHub">GitHub</p>
                 <p id="homeLinksAschCode">Asch source code repository</p>
                 <span class="rightLine"></span>
             </a>
