--- a/index.html
+++ b/index.html
@@ -56,9 +56,27 @@
                     <a href="#links" id="nav_links">Links</a>
                 </li>
             </ul>
+
         </div>
     </div>
 </nav>
+<div class="switchLanguageBtn">
+    <div class="btnContainer">
+        <i class="sjx"></i>
+        <div class="btn1">
+            <i class="btnFlag1">
+                <img src="images/china.png" alt="中文">
+            </i>
+            <span>中文简体</span>
+        </div>
+        <div class="btn2">
+            <i class="btnFlag2">
+                <img src="images/uk.png" alt="English">
+            </i>
+            <span>English</span>
+        </div>
+    </div>
+</div>
 <a href="#home" class="toTop">
     <span>
         <i></i>
