--- a/sjdemo.html
+++ b/sjdemo.html
@@ -4,55 +4,56 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
 
-        .btnContainer{
+
+        .switchLanguageBtn .btnContainer{
+            position: fixed;
+            top:30px;
+            right: 50px;
+        }
+
+        .btnContainer {
             position: relative;
             width: 120px;
             height: 40px;
-            margin: 50px auto;
+            /*margin: 50px auto;*/
             cursor: pointer;
-            /*background: red;*/
         }
 
-
-        .btnContainer div:hover{
+        .btnContainer div:hover {
             background: #042745;
         }
 
-        .btnContainer div{
+        .btnContainer div {
             background: #12072e;
         }
 
-        .btnContainer .btn1, .btnContainer .btn2{
+        .btnContainer .btn1, .btnContainer .btn2 {
             width: 100px;
             height: 100%;
             margin: 2px 0;
             padding: 0 10px;
         }
 
-        .btnContainer:hover .btn2{
+        .btnContainer:hover .btn2 {
             opacity: 1;
             margin-top: 8px;
         }
 
-
-        .btnContainer .btn2{
+        .btnContainer .btn2 {
             position: absolute;
-            top:100%;
-            left:0;
+            top: 100%;
+            left: 0;
             opacity: 0;
             -webkit-transition: all 0.5s ease-in-out;
             transition: all 0.5s ease-in-out;
         }
 
-
-
-
-        .btnContainer .btn1 .btnFlag1,.btnContainer .btn2 .btnFlag2{
+        .btnContainer .btn1 .btnFlag1, .btnContainer .btn2 .btnFlag2 {
             display: inline-block;
             width: 30px;
             height: 40px;
@@ -60,27 +61,24 @@
             text-align: center;
         }
 
-        .btnContainer .btn1 .btnFlag1 img, .btnContainer .btn2 .btnFlag2 img{
-            width:auto;
+        .btnContainer .btn1 .btnFlag1 img, .btnContainer .btn2 .btnFlag2 img {
+            width: auto;
             height: 14px;
         }
 
-
-        .btnContainer .btn1  span, .btnContainer .btn2  span{
+        .btnContainer .btn1 span, .btnContainer .btn2 span {
             color: #fff;
             vertical-align: text-bottom;
             font-size: 14px;
         }
 
-
-
-        .btnContainer:hover .sjx{
-            top:19px;
+        .btnContainer:hover .sjx {
+            top: 19px;
             transform: rotate(-45deg);
             -webkit-transform: rotate(-45deg);
         }
 
-        .sjx{
+        .sjx {
             display: inline-block;
             border-right: 2px solid #343c99;
             border-top: 2px solid #343c99;
@@ -101,22 +99,24 @@
     </style>
 </head>
 <body>
-<div class="btnContainer">
-    <i class="sjx"></i>
-    <div class="btn1">
-        <i class="btnFlag1">
-            <img src="images/china.png" alt="中文">
-        </i>
-       <span>中文简体</span>
+<div class="switchLanguageBtn">
+    <div class="btnContainer">
+        <i class="sjx"></i>
+        <div class="btn1">
+            <i class="btnFlag1">
+                <img src="images/china.png" alt="中文">
+            </i>
+            <span>中文简体</span>
+        </div>
+        <div class="btn2">
+            <i class="btnFlag2">
+                <img src="images/uk.png" alt="English">
+            </i>
+            <span>English</span>
+        </div>
     </div>
-    <div class="btn2">
-        <i class="btnFlag2">
-            <img src="images/uk.png" alt="English">
-        </i>
-        <span>English</span>
-    </div>
-
 </div>
+
 
 </body>
 </html>
