--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <span class="navLogo replaceLogoTwo"></span>
         </a>
         <div class="navRight">
-            <div class="switchLanguage">
-                <button class="simplifiedChinese">中文简体</button>
-                <button class="switchToEnglish">English</button>
-            </div>
+            <!--<div class="switchLanguage">-->
+                <!--<button class="simplifiedChinese">中文简体</button>-->
+                <!--<button class="switchToEnglish">English</button>-->
+            <!--</div>-->
             <ul class="equalThan">
                 <li>
                     <a href="#home" id="nav_home">Home</a>
@@ -56,27 +56,28 @@
                     <a href="#links" id="nav_links">Links</a>
                 </li>
             </ul>
-
+            <div class="switchLanguageBtn">
+                <div class="btnContainer">
+                    <i class="sjx"></i>
+                    <div class="btn1">
+                        <i class="btnFlag1">
+                            <img src="images/uk.png" alt="national flag">
+                        </i>
+                        <span class="btnText1">English</span>
+                    </div>
+                    <div class="btn2">
+                        <i class="btnFlag2">
+                            <img src="images/china.png" alt="national flag">
+                        </i>
+                        <span class="btnText2">中文简体</span>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
 </nav>
-<div class="switchLanguageBtn">
-    <div class="btnContainer">
-        <i class="sjx"></i>
-        <div class="btn1">
-            <i class="btnFlag1">
-                <img src="images/china.png" alt="中文">
-            </i>
-            <span>中文简体</span>
-        </div>
-        <div class="btn2">
-            <i class="btnFlag2">
-                <img src="images/uk.png" alt="English">
-            </i>
-            <span>English</span>
-        </div>
-    </div>
-</div>
+
 <a href="#home" class="toTop">
     <span>
         <i></i>
