--- a/dapp4.html
+++ b/dapp4.html
@@ -51,6 +51,23 @@
                     <a href="index.html#links" id="dappNav9">Links</a>
                 </li>
             </ul>
+            <div class="switchLanguageBtn">
+                <div class="btnContainer">
+                    <i class="sjx"></i>
+                    <div class="btn1">
+                        <i class="btnFlag1">
+                            <img src="images/uk.png" alt="national flag">
+                        </i>
+                        <span class="btnText1">English</span>
+                    </div>
+                    <div class="btn2">
+                        <i class="btnFlag2">
+                            <img src="images/china.png" alt="national flag">
+                        </i>
+                        <span class="btnText2">中文简体</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </nav>
